# 1091-parallel-programming-1216-report

./: .gitignore  CMakeLists.txt  README.md  cuda.cu  generate_data.py  main.cpp  miller_rabin.cpp  ompmatrix.cpp  test_cuda.py  trim.h
cmake/: FindGMP.cmake
